--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
     player.ready(function() {
       player.src({
-        src: 'http://dash.edgesuite.net/akamai/bbb_30fps/bbb_30fps.mpd',
+        src: 'http://63.141.235.50:1935/livedespertar/despertar/manifest.mpd',
         type: 'application/dash+xml'
       });
     });
 
     livePlayer.ready(function(){
       livePlayer.src({
-        src: 'http://vm2.dashif.org/livesim/mup_30/testpic_2s/Manifest.mpd',
+        src: 'http://63.141.235.50:1935/livedespertar/despertar/manifest.mpd',
         type: 'application/dash+xml'
       });
     });
