--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </video>
 
       <form id=load-url>
-        <label> Video URL: <input id=url type=url value="https://s3.amazonaws.com/_bc_dml/example-content/sintel_dash/sintel_vod.mpd"> </label> <br>
+        <label> Video URL: <input id=url type=url value="http://63.141.235.50:1935/livedespertar/despertar/manifest.mpd"> </label> <br>
         <label> Widevine License URL: <input id=wvServer type=url value=""> </label><br>
         <label> PlayReady License URL: <input id=prServer type=url value=""> </label><br>
         <button type=submit>Load</button>
